--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "typescript": "^5.7.2"
   },
   "dependencies": {
+    "@rbxts/planck": "github:CapedBojji/planck_ts",
     "@rbxts/rewire": "^0.3.0"
   }
 }
