--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "typescript": "^5.7.2"
   },
   "dependencies": {
-    "@rbxts/planck": "github:CapedBojji/planck_ts",
+    "@rbxts/planck": "0.1.0-rc.3",
     "@rbxts/rewire": "^0.3.0"
   }
 }
