fix: update version in package.json to 0.1.0

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@rbxts/planck-rewire",
-  "version": "0.1.0-rc.1",
+  "version": "0.1.0",
   "description": "A hot-reload plugin for @rbxts/planck",
   "main": "out/init.lua",
   "scripts": {
