fix: update @rbxts/planck dependency version to ^0.1.2

--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "typescript": "^5.7.2"
   },
   "dependencies": {
-    "@rbxts/planck": "0.1.0-rc.3",
+    "@rbxts/planck": "^0.1.2",
     "@rbxts/rewire": "^0.3.0"
   }
 }
