fix: update version in package.json and pnpm-lock.yaml to 0.1.2-rc.0 and 0.1.3-rc.0 respectively; adjust imports in index.ts

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@rbxts/planck-rewire",
-  "version": "0.1.1",
+  "version": "0.1.2-rc.0",
   "description": "A hot-reload plugin for @rbxts/planck",
   "main": "out/init.lua",
   "scripts": {
@@ -52,7 +52,7 @@
     "typescript": "^5.7.2"
   },
   "dependencies": {
-    "@rbxts/planck": "^0.1.2",
+    "@rbxts/planck": "0.1.3-rc.0",
     "@rbxts/rewire": "^0.3.0"
   }
 }
